Fix contextual link visiblity on menu blocks

--- a/web/themes/custom/citizen_sdc/components/02-chunks/menus/00-menu-base/menu-base/menu-base.scss
+++ b/web/themes/custom/citizen_sdc/components/02-chunks/menus/00-menu-base/menu-base/menu-base.scss
@@ -6,8 +6,7 @@
 @use '../../../../00-base/01-mixins/general-mixins' as *;
 
 .block-menu {
-
-  &:not.layout-builder-block .contextual {
+  &:not(.layout-builder-block) .contextual {
     display: none;
   }
 }
